crates/tests/libs/bindgen/data/error/guid_invalid_literal/input.rdl

#[win32]
mod Test {
    #[guid(0xffffffffffffffffffffffffffffffff0)]
    interface IFoo {}
}
        